2001-04-12	<mschimek@users.sourceforge.net>

	* Fixed p-frame skipped mb bug.