@@ -19,7 +19,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: alsa.c,v 1.11 2001-03-31 11:10:26 garetxe Exp $ */
+/* $Id: alsa.c,v 1.12 2001-05-05 23:35:09 garetxe Exp $ */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -230,7 +230,7 @@ open_pcm_alsa(char *dev_name, int sampling_rate, bool stereo)
 
 	ASSERT("init pcm/alsa capture fifo", init_callback_fifo(
 		audio_cap_fifo = &alsa->pcm.fifo, "audio-alsa",
-		wait_full, send_empty, NULL, 1, buffer_size));
+		wait_full, send_empty, 1, buffer_size));
 
 	alsa->pcm.fifo.start = start;
 
