@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: v4l2.c,v 1.9 2001-03-31 11:10:26 garetxe Exp $ */
+/* $Id: v4l2.c,v 1.10 2001-05-05 23:35:09 garetxe Exp $ */
 
 #include <ctype.h>
 #include <assert.h>
@@ -222,7 +222,7 @@ open_v4l2(struct v4l2_context *v4l2, char *dev_name)
 
 		ASSERT("init vbi capture fifo", init_callback_fifo(
 			&v4l2->vbi.fifo, "vbi-v4l2-stream",
-			wait_full_stream, send_empty_stream, NULL, vrbuf.count, 0));
+			wait_full_stream, send_empty_stream, vrbuf.count, 0));
 
 		v4l2->vbi.fifo.start = capture_on;
 		v4l2->vbi.fifo.user_data = v4l2;
@@ -263,7 +263,7 @@ open_v4l2(struct v4l2_context *v4l2, char *dev_name)
 
 		ASSERT("init vbi capture fifo", init_callback_fifo(
 			&v4l2->vbi.fifo, "vbi-v4l2-read",
-			wait_full_read, send_empty_read, NULL, buffer_size, 1));
+			wait_full_read, send_empty_read, buffer_size, 1));
 
 		v4l2->vbi.fifo.user_data = v4l2;
 	}
@@ -332,7 +332,7 @@ open_vbi_v4l2(char *dev_name)
 
 		ASSERT("init vbi capture fifo", init_callback_fifo(
 			&v4l2->vbi.fifo, "vbi-v4l",
-			wait_full_read, send_empty_read, NULL, buffer_size, 1));
+			wait_full_read, send_empty_read, buffer_size, 1));
 
 		v4l2->vbi.fifo.user_data = v4l2;
 	}
