@@ -16,7 +16,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: v4l.c,v 1.11 2001-03-31 11:10:26 garetxe Exp $ */
+/* $Id: v4l.c,v 1.12 2001-05-05 23:35:09 garetxe Exp $ */
 
 #include <ctype.h>
 #include <assert.h>
@@ -183,7 +183,7 @@ v4l_init(void)
 
 	ASSERT("init capture fifo", init_callback_fifo(
 		&cap_fifo, "video-v4l",
-		wait_full, NULL, NULL, buf.frames, 0));
+		wait_full, NULL, buf.frames, 0));
 
 	cap_fifo.start = capture_on;
 
