@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: v4l2.c,v 1.10 2001-03-31 11:10:26 garetxe Exp $ */
+/* $Id: v4l2.c,v 1.11 2001-05-05 23:35:09 garetxe Exp $ */
 
 #include <ctype.h>
 #include <assert.h>
@@ -337,7 +337,7 @@ v4l2_init(void)
 
 	ASSERT("init capture fifo", init_callback_fifo(
 		&cap_fifo, "video-v4l2",
-		wait_full, send_empty, NULL, vrbuf.count, 0));
+		wait_full, send_empty, vrbuf.count, 0));
 
 	cap_fifo.start = capture_on;
 
