@@ -1,3 +1,7 @@
+2001-05-6	<garetxe@users.sourceforge.net>
+
+	* more work on fifos (killing zombies, fixes). Still some bugs left.
+
 2001-04-12	<mschimek@users.sourceforge.net>
 
 	* Fixed p-frame skipped mb bug.
